changes to background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <header>
-      <img src="images\logo-LF.png" alt="Lina's Profile Image" class="profile-image">
+      <img src="css\images\logo-LF.png" alt="Lina's Profile Image" class="profile-image">
       <h1 class="tag name">Hello, I'm Lina</h1>
     </header>
 
@@ -37,7 +37,6 @@
           <li>CSS</li>
           <li>JavaScript</li>
           <li>Angular</li>
-          <li>React</li>
           <li>C#</li>
         </ul>
         <p>To learn more, <a class="resume-link" href="resume.html">view my resume.</a></p>
