--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
             <a href="#contact">Contact</a>
         </nav>
         <div class="content-wrap">
-            <img class="profile-img col-narrow" src="images/profile.jpg" alt="Lina Fowler">
+            <img class="profile-img col-narrow" src="css/images/profile.jpg" alt="Lina Fowler">
             <div class="col-wide">
                 <h1>Lina Fowler</h1>
                 <h2>Web Developer + Designer</h2>
