changes to resume and profile picture

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </div>
 
     <header>
-      <img src="css\images\logo-LF.png" alt="Lina's Profile Image" class="profile-image">
-      <h1 class="tag name">Hello, I'm Lina</h1>
+      <img src="css\images\logo-LF2.png" alt="Lina's Profile Image" class="profile-image">
+      <h1 class="tag name">Developer | Designer | Photographer</h1>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I'm a self-taught, motivated, and creative Software Engineer with a background in web development and design. I develop web designs that are intuitive, aesthetically pleasing, and delivers the clients voice to their viewers.</p>
+        <p>I'm a self-taught, analytical, and creative Software Engineer with a background in web development and design. Proficient in multiple coding languages, design software, and great communication skills. Focused on creating web designs that are aesthetically pleasing as well as intuitive and responsive.</p>
       </div> 
 
       <div class="card">
@@ -39,7 +39,7 @@
           <li>Angular</li>
           <li>C#</li>
         </ul>
-        <p>To learn more, <a class="resume-link" href="resume.html">view my resume.</a></p>
+        <p>To learn more, <b><a class="resume-link" href="resume.html">view my resume.</a></b></p>
       </div> 
 
     </main>
