--- a/resume.html
+++ b/resume.html
@@ -101,11 +101,11 @@
             <h2>Education</h2>
             <!--School Details-->
                 <div class="col-narrow">
-                <h3>University of Utah </h3>
+                <h3>University of Utah <br>School of Engineering</h3>
                 <p>2012 - 2017</p>
                 </div>
                     <div class="col-wide">
-                    <p>Bachelor Degree in Web Development and Design<p>
+                    <p>Bachelor of Science Degree in University Studies <br> Emphasis: Web Development and Design<p>
                     </div>
             </div>
             
