update skills section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <body>
 
     <div class="main-nav">
@@ -27,9 +29,28 @@
       <div class="card">
         <h2>Background</h2>
         <p>I'm a self-taught, analytical, and creative Software Engineer with a background in web development and design. Proficient in multiple coding languages, design software, and great communication skills. Focused on creating web designs that are aesthetically pleasing as well as intuitive and responsive.</p>
-      </div> 
-
+      </div>
     </main>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-3">
+                <img class="skills-img" src="css/images/circle-compBlue.png" alt="responsive-design" height="121" width="100" />
+                <h3 class="skills-decript">Responsive Design</h3>
+                <p class="skills-para">Specializing in design that looks fluid on multiple platforms such as mobile and tablet versions. </p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-3">
+                <img class="skills-img" src="css/images/ui-circleBlue.png" alt="responsive-design" height="121" width="100" />
+                <h3 class="skills-decript">Intuitive & creative UI</h3>
+                <p class="skills-para">Creating designs that engage the user and provide intuitive navigation throughout the site.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-3">
+                <img class="skills-img" src="css/images/gears-circleBlue.png" alt="responsive-design" height="121" width="100" />
+                <h3 class="skills-decript">Language Proficiency</h3>
+                <p class="skills-para">Crisp clean design & development that does not distract viewers. </p>
+            </div>
+        </div>
+    </div>
+
     <footer>
       <ul>
         <li><a href="#" target="blank" class="social linkedin">LinkedIn</a></li>
