--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="scripts.js"></script>
+
   <body>
 
     <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Lina Fowler</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Experience</a></li>
-          <li><a href="#">Photos</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+      <ul class="nav">
+        <li class="name">Lina Fowler</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Experience</a></li>
+        <li><a href="Portfolio.html">Portfolio</a></li>
+        <li><a href="mail:lina.langford235@gmail.com">Contact</a></li>
+      </ul>
     </div>
 
     <header>
@@ -41,20 +42,21 @@
             <div class="col-lg-4 col-md-4 col-sm-3">
                 <img class="skills-img" src="css/images/ui-circleBlue.png" alt="responsive-design" height="121" width="100" />
                 <h3 class="skills-decript">Intuitive & creative UI</h3>
-                <p class="skills-para">Creating designs that engage the user and provide intuitive navigation throughout the site.</p>
+                <p class="skills-para">Creating custom website designs that engage the user and provide intuitive navigation throughout the site.</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-3">
                 <img class="skills-img" src="css/images/gears-circleBlue.png" alt="responsive-design" height="121" width="100" />
                 <h3 class="skills-decript">Language Proficiency</h3>
-                <p class="skills-para">Crisp clean design & development that does not distract viewers. </p>
+                <p class="skills-para">Proficiency in multiple coding languages to provide website designs that are customized to the client. </p>
             </div>
         </div>
     </div>
 
-    <footer>
-      <ul>
+    <footer class="container">
+      <ul class="col-lg-12">
         <li><a href="#" target="blank" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" target="blank" class="social insta">Instagram</a></li>
+        <li><a href="resume.html" target="blank" class="social mail">Resume</a></li>
       </ul>
       <p class="copyright">Copyright 2018, Lina Fowler</p>
     </footer>
