moved folder structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <header>
-      <img src="css\images\logo-LF.png" alt="Lina's Profile Image" class="profile-image">
+      <img src="images\logo-LF.png" alt="Lina's Profile Image" class="profile-image">
       <h1 class="under-logo">Developer | Designer | Photographer</h1>
     </header>
 
@@ -35,17 +35,17 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-3">
-                <img class="skills-img" src="css/images/circle-compBlue.png" alt="responsive-design" height="121" width="100" />
+                <img class="skills-img" src="images/circle-compBlue.png" alt="responsive-design" height="121" width="100" />
                 <h3 class="skills-decript">Responsive Design</h3>
                 <p class="skills-para">Specializing in design that looks fluid on multiple platforms such as mobile and tablet versions. </p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-3">
-                <img class="skills-img" src="css/images/ui-circleBlue.png" alt="responsive-design" height="121" width="100" />
+                <img class="skills-img" src="images/ui-circleBlue.png" alt="responsive-design" height="121" width="100" />
                 <h3 class="skills-decript">Intuitive & creative UI</h3>
                 <p class="skills-para">Creating custom website designs that engage the user and provide intuitive navigation throughout the site.</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-3">
-                <img class="skills-img" src="css/images/gears-circleBlue.png" alt="responsive-design" height="121" width="100" />
+                <img class="skills-img" src="images/gears-circleBlue.png" alt="responsive-design" height="121" width="100" />
                 <h3 class="skills-decript">Language Proficiency</h3>
                 <p class="skills-para">Proficiency in multiple coding languages to provide website designs that are customized to the client. </p>
             </div>
